--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.3",
     "next": "16.0.10",
     "pg": "^8.16.3",
     "react": "19.2.1",
